# opengl-renderer

./: CMakeLists.txt  README.md
shaders/: frag.glsl  vert.glsl
src/: main.cpp  shader_program.cpp  shader_program.h
